--- a/ToDoList/Views/Todo/Index.cshtml
+++ b/ToDoList/Views/Todo/Index.cshtml
@@ -1,26 +1,27 @@
 ﻿@page
-@model TodoViewModel
+@model ToDoViewModel
 @{
-    ViewData["Title"] = "Manage your todo list";
+    ViewBag.Title = "Manage your todo list";
+    //ViewData["Title"] = "Manage your todo list"; 报Null异常
 }
 
 <div class="panel panel-default todo-panel">
-    <div class="panel-heading">@ViewData["Title"]</div>
-    
+    <div class="panel-heading">@ViewBag.Title</div>
+
     <table class="table table-hover">
         <thead>
-        <tr>
-            <td>&#x2714</td>
-            <td>Item</td>
-            <td>Due</td>
-        </tr>
+            <tr>
+                <td>&#x2714</td>
+                <td>Item</td>
+                <td>Due</td>
+            </tr>   
         </thead>
-    
+
         @foreach (var item in Model.Items)
         {
             <tr>
                 <td>
-                    <input type="checkbox" class="done-checkbox"/>
+                    <input type="checkbox" class="done-checkbox" />
                 </td>
                 <td>@item.Title</td>
                 <td>@item.DueAt</td>
