删除@page标识，程序运行成功

--- a/ToDoList/Views/Todo/Index.cshtml
+++ b/ToDoList/Views/Todo/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@page
-@model ToDoViewModel
+﻿@model ToDoViewModel
 @{
     ViewBag.Title = "Manage your todo list";
     //ViewData["Title"] = "Manage your todo list"; 报Null异常
