--- a/ToDoList/Views/Todo/Index.cshtml
+++ b/ToDoList/Views/Todo/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ToDoViewModel
+@using Humanizer
 @{
     ViewBag.Title = "Manage your todo list";
     //ViewData["Title"] = "Manage your todo list"; 报Null异常
@@ -23,7 +24,7 @@
                     <input type="checkbox" class="done-checkbox" />
                 </td>
                 <td>@item.Title</td>
-                <td>@item.DueAt</td>
+                <td>@item.DueAt.Humanize()</td>
             </tr>
         }
     </table>
