设置待办事项筛选条件

--- a/ToDoList/Views/Todo/Index.cshtml
+++ b/ToDoList/Views/Todo/Index.cshtml
@@ -22,7 +22,7 @@
             <tr>
                 <td>
                     <form asp-action="MarkDone" method="POST">
-                        <input type="checkbox" class="done-checkbox" />
+                        <input type="checkbox" class="done-checkbox" checked="@item.IsDone"/>
                         <input type="hidden" name="id" value="@item.Id"/>
                     </form>
                 </td>
